--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,15 @@ django-widget-tweaks==1.4.12
 et-xmlfile==1.1.0
 import-export==0.3.1
 MarkupPy==1.14
-numpy==1.25.1
+numpy==2.1.2
 odfpy==1.4.1
 openpyxl==3.1.2
-pandas==2.1.1
+pandas==2.2.3
 Pillow==10.1.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+setuptools==75.1.0
 six==1.16.0
 sqlparse==0.4.4
 tablib==3.5.0
